# skibidict-v1

./: .gitignore  API.md  pyproject.toml  skibidict.db-shm  skibidict.db-wal
src/skibidict_v1/: __init__.py  app.py  cli.py  db.py  routes.py
